# litecore-litecoin

./: .gitignore  CMakeLists.txt  configure.ac
build-aux/m4/: bitcoin_qt.m4
contrib/devtools/: test-security-check.py
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  chainparams.cpp  httpserver.cpp  init.cpp  netbase.cpp
